# adm-sfa

./: .gitignore  CLAUDE.md  Cargo.toml  NewFeature-PurchaseStatus.md  SPEC.md  schema.sql  stack-plan.md
.claude/agents/: rust-code-reviewer.md
crates/core/: Cargo.toml  schema.sql
crates/core/migrations/: 001_initial.sql  002_purchase_multiple_items.sql  004_app_setting.sql
crates/core/src/: backup.rs  config.rs  date.rs  docs_fs.rs  format.rs  lib.rs  money.rs  reporting.rs  service.rs
crates/core/src/db/queries/: categories.rs  documents.rs  eur_ledger.rs  inventory.rs  mod.rs  outbound.rs  purchases.rs  settings.rs
crates/core/src/model/: category.rs  document.rs  donor.rs  inventory.rs  mod.rs  outbound.rs  purchase.rs  transaction.rs  transfer.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: app.rs  main.rs  screenshot.rs
crates/desktop/src/ui/: mod.rs  sidebar.rs
crates/desktop/src/ui/views/: brl_ledger.rs  donors.rs  eur_ledger.rs  inventory.rs  mod.rs  outbound.rs  purchases.rs  reports.rs  settings.rs  transfers.rs
crates/reports/: Cargo.toml
crates/reports/src/: csv.rs  lib.rs  pdf.rs
crates/reports/templates/: report.typ
locales/: de.yml  en.yml  pt-BR.yml
migrations/: 003_purchase_negotiation_status.sql
src/: app.rs  backup.rs  docs_fs.rs  format.rs  main.rs
src/db/: mod.rs
src/db/queries/: brl_ledger.rs  categories.rs  documents.rs  donors.rs  eur_ledger.rs  inventory.rs  mod.rs  outbound.rs  purchases.rs  transfers.rs
src/model/: document.rs  donor.rs  inventory.rs  outbound.rs  purchase.rs  transaction.rs  transfer.rs
src/reports/: csv.rs  pdf.rs
src/ui/: mod.rs  sidebar.rs
src/ui/views/: brl_ledger.rs  dashboard.rs  donors.rs  eur_ledger.rs  inventory.rs  outbound.rs  purchases.rs  reports.rs  settings.rs  transfers.rs
src/ui/widgets/: amount_field.rs  document_panel.rs  mod.rs
templates/: report.typ
