[package]
name = "adm-sfa"
version = "0.1.0"
edition = "2021"

[dependencies]
# glow (OpenGL) backend only — avoids wgpu/naga/ash/vello for the scaffold build.
# Switch to default-features if wgpu is needed later.
eframe             = { version = "0.35", default-features = false, features = ["glow", "x11", "wayland", "default_fonts"] }
egui_extras        = { version = "0.35", features = ["image"] }
rusqlite           = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6"
rust_decimal       = "1"
rust_decimal_macros = "1"
# typst-as-lib and typst-bake deferred — spike them in isolation before adding here.
# See stack-plan.md risk note on PDF pipeline stability.
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
csv                = "1"
zip                = "8"
walkdir            = "2"
dirs               = "6"
chrono             = "0.4"
