[package]
name = "adm-sfa"
version = "0.1.0"
edition = "2021"

[dependencies]
# glow (OpenGL) backend only — avoids wgpu/naga/ash/vello for the scaffold build.
# Switch to default-features if wgpu is needed later.
eframe             = { version = "0.35", default-features = false, features = ["glow", "x11", "wayland", "default_fonts"] }
egui_extras        = { version = "0.35", features = ["image"] }
rusqlite           = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6"
rust_decimal       = "1"
rust_decimal_macros = "1"
typst-as-lib       = { version = "0.16.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst              = "0.15.0"
typst-layout       = "0.15.0"
typst-pdf          = "0.15.0"
ecow               = "0.2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
csv                = "1"
zip                = "8"
walkdir            = "2"
dirs               = "6"
chrono             = "0.4"
rust-i18n = "4.2.1"
