[workspace]
resolver = "2"
members = ["crates/core", "crates/reports", "crates/desktop"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
rusqlite            = { version = "0.40", features = ["bundled"] }
rusqlite_migration  = "2.6"
rust_decimal        = "1"
rust_decimal_macros  = "1"
chrono              = "0.4"
rust-i18n           = "4.2.1"
dirs                = "6"
